Closed
Bug 38890
Opened 24 years ago
Closed 24 years ago
No sans serif font in msg display
Categories
(MailNews Core :: MIME, defect, P3)
MailNews Core
MIME
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: BenB, Assigned: nhottanscp)
Details
(Keywords: regression)
Reproduce:
1. Set you font preference to sans-serif.
2. Send yourself a HTML mail with 4.x. Do not set fonts. You'll recieve a ,sg
without font tags.
3. View it with Mozilla.
Actual result:
The msg is displayed in a serif font.
Expected result:
The msg is displayed in a sans-serif font.
Comments:
Same for plain text msgs, if variable width font is selected. (The previous
tree contained the same bug for plain text msgs, which I fixed for 31906, but
this fix is now impossible due to the changes for the language sensitive fonts
bug.)
Reporter | ||
Updated•24 years ago
|
Keywords: regression
Assignee | ||
Comment 1•24 years ago
|
||
Accepting, I have a fix.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
Assignee | ||
Comment 2•24 years ago
|
||
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 3•24 years ago
|
||
verified on Linux with build just built. tnx for fixing so fast.
Reporter | ||
Updated•24 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reporter | ||
Comment 4•24 years ago
|
||
wait, bugzilla mails are still displayed in a serif font. They have no
content-type/charset headers. Could this also be the real reason for bug 37299?
(The latter bug is still suspicious to me, because I still think, the <pre>s
shouldn't be necessary.)
REOPENing
Assignee | ||
Updated•24 years ago
|
Status: REOPENED → ASSIGNED
Assignee | ||
Comment 5•24 years ago
|
||
fixed remaining problem (bugzilla mails display)
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•