Changed GetMailNewsFont to use a pref value to get a proper variable width font, bug 38890.