mailnews/mime/src/mimemoz2.h
@@ -162,8 +162,6 @@ extern "C" char             *MimeGetStringByID(PRInt32 stringID);
 // Utility to create a nsIURI object...
 extern "C" nsresult         nsMimeNewURI(nsIURI** aInstancePtrResult, const char *aSpec, nsIURI *aBase);
 
-extern "C" int BeginMailNewsFont(MimeObject *obj);
-extern "C" int EndMailNewsFont(MimeObject *obj);
 extern "C" nsresult GetMailNewsFont(MimeObject *obj, PRBool styleFixed, char *fontName, PRUint32 nameBuffSize, PRInt32 *fontSize);
 
 #ifdef __cplusplus
